--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.GeolocationTracker"
         tools:targetApi="31">
         <activity
+            android:name=".ui.login.LoginAccountActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login.CreateAccountActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
