--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,7 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.8'
 
+    // dependencia para las activitys
+    implementation("androidx.activity:activity-ktx:1.7.2")
+
 }
